--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,26 +1,22 @@
 # Site settings
-name: Brittany Chiang
-title: Brittany Chiang | Front End Software Engineer
-description: Design-minded front-end software engineer focused on building beautiful interfaces and experiences
-url: https://bchiang7.github.io/
+name: Dharanidhar Reddy Yerram
+title: Dharanidhar | Software Engineer
+description: software engineer focused on building innovative applications that make a difference.
+url: https://dreddyyerram.github.io/
 baseurl: ''
-email: brittany.chiang@gmail.com
-cover: https://bchiang7.github.io/img/og.png
-logo: https://bchiang7.github.io/img/emojis/technologist.png
-resume: https://bchiang7.github.io/resume.pdf
+email: yerramdharanidhar@gmail.com
+cover: https://dreddyyerram.github.io/img/og.png
+logo: https://dreddyyerram.github.io/img/emojis/technologist.png
+resume: https://dreddyyerram.github.io/resume.pdf
 social:
   - title: email
-    url: mailto:brittany.chiang@gmail.com
+    url: mailto:yerramdharanidhar@gmail.com
   - title: twitter
-    url: https://twitter.com/bchiang7
-  - title: instagram
-    url: https://instagram.com/bchiang7
-  - title: codepen
-    url: http://codepen.io/bchiang7
+    url: https://twitter.com/bablooyerram
   - title: github
-    url: https://github.com/bchiang7
+    url: https://github.com/dreddyyerram
   - title: linkedin
-    url: https://www.linkedin.com/in/bchiang7
+    url: https://www.linkedin.com/in/dharanidharreddy/
 
 # Build settings
 markdown: kramdown
