--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "brittanychiang.com",
   "version": "0.0.0",
-  "description": "Design-minded front-end software engineer focused on building beautiful interfaces and experiences",
+  "description": "Portfolio",
   "repository": {
     "type": "git",
     "url": "https://github.com/bchiang7/bchiang7.github.io"
