--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "brittanychiang.com",
+  "name": "Dharanidhar.com",
   "version": "0.0.0",
   "description": "Portfolio",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bchiang7/bchiang7.github.io"
+    "url": "https://github.com/dreddyyerram/dreddyyerram.github.io"
   },
-  "homepage": "https://github.com/bchiang7/bchiang7.github.io",
+  "homepage": "https://github.com/dreddyyerram/dreddyyerram.github.io",
   "main": "gulpfile.js",
   "scripts": {
     "start": "gulp serve --watch",
     "build": "gulp build"
   },
-  "author": "Brittany Chiang",
+  "author": "Dharanidhar Reddy",
   "license": "ISC",
   "devDependencies": {
     "@nuscout/eslint-config": "^0.2.1",
